--- a/events/halloween2k22/page.html
+++ b/events/halloween2k22/page.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Coming soon...</p>
+    <p>Page...</p>
 	<a href="./events/halloween2k22/page.html">link</a>
 </body>
 </html>
